fixex horizonta scroll on mobile,
TODO: fix alberto image and uncomment the relative team member section

--- a/source/scss/_common.scss
+++ b/source/scss/_common.scss
@@ -1,7 +1,10 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: $body-color;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 ::selection {
@@ -11,6 +14,8 @@ body {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* preloader */
