--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,10 +1,3 @@
-/**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://www.facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
- */
-
 /*!------------------------------------------------------------------
 [MAIN STYLESHEET]
 
@@ -373,10 +366,13 @@ h6, .h6 {
   padding: 15px 85px;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #fff;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 ::-moz-selection {
@@ -391,6 +387,8 @@ body {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* preloader */
